# Jhon-Crow-text-to-speech-with-chatterbox

./: .gitignore  CLAUDE.md  README.md  build.bat  pyproject.toml  tts_chatterbox.spec
.github/workflows/: build-release.yml
pyinstaller_hooks/: hook-chatterbox.py  hook-perth.py  hook-tts_app.py  rthook_tts_app.py
src/tts_app/: __init__.py  main.py
src/tts_app/gui/: __init__.py  app.py
src/tts_app/preprocessors/: __init__.py  base.py  footnotes.py  page_numbers.py  pipeline.py  symbols.py
src/tts_app/readers/: __init__.py  base.py  docx_reader.py  markdown_reader.py  pdf_reader.py  registry.py  rtf_reader.py  text_reader.py
src/tts_app/tts/: __init__.py  base.py  chatterbox.py
src/tts_app/utils/: __init__.py  language_detection.py
tests/: __init__.py  test_language_detection.py  test_preprocessors.py  test_readers.py  test_tts.py
